fix zooming on ios

--- a/src/blocks/index.css
+++ b/src/blocks/index.css
@@ -1,12 +1,12 @@
 x-blocks {
-  flex-basis: 55%;
+  flex-basis: 60%;
   display: flex;
   align-items: center;
   max-width: 275px;
 }
 
 x-blocks select {
-  font-size: 12px;
+  font-size: 16px;
   margin-left: auto;
   width: 100%;
 }
@@ -14,11 +14,5 @@ x-blocks select {
 @media (min-width: 768px) {
   x-blocks select {
     min-width: 200px;
-  }
-}
-
-@media (min-height: 500px) and (min-width: 500px) {
-  x-blocks select {
-    font-size: 16px;
   }
 }
